--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="manifest" crossorigin="use-credentials" href="index.webmanifest">
+		<meta name="description" content="View locations of intereast as identified by the New Zealand Ministery of Health on an interactive map with time and location filtering">
 		%svelte.head%
 	</head>
 	<body>
