--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="manifest" crossorigin="use-credentials" href="index.webmanifest">
 		<meta name="description" content="View locations of intereast as identified by the New Zealand Ministery of Health on an interactive map with time and location filtering">
+		<meta name="theme-color" content="#ffe330">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<link rel="icon" href="/favicon.png" />
+		<link rel="manifest" crossorigin="use-credentials" href="index.webmanifest">
+		<link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
 		%svelte.head%
 	</head>
 	<body>
