--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<meta name="description" content="View locations of intereast as identified by the New Zealand Ministery of Health on an interactive map with time and location filtering">
 		<meta name="theme-color" content="#ffe330">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="keywords" content="Locations of interest, coronavirus locations of interest, covid-19 locations of interest">
 
 		<link rel="icon" href="/favicon.png" />
 		<link rel="manifest" crossorigin="use-credentials" href="index.webmanifest">
